--- a/create-react-express/client/package.json
+++ b/create-react-express/client/package.json
@@ -6,6 +6,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.19.2",
+    "jquery": "^3.4.1",
     "mongoose": "^5.8.12",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
