--- a/create-react-express/package.json
+++ b/create-react-express/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mern",
   "version": "1.0.0",
+  "proxy": "http://localhost:3001/",
   "description": "Mern Demo",
   "main": "server.js",
   "scripts": {
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "jquery": "^3.4.1"
   }
 }
