--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "jquery": "^3.4.1",
-    "mongoose": "^5.9.2"
+    "jquery": "^3.4.1"
   }
 }
