--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "jquery": "^3.4.1",
-    "mongoose": "^5.9.2"
+    "mongoose": "^5.9.2",
+    "radium": "^0.26.0"
   }
 }
